--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="tku/w5-blog/blog.html">w5_blog</a></li>
                             <li><a href="tku/w8_tku60/tku60.html">w8_tku60</a></li>
-                            <li><a href="#">News</a></li> 
+                            <li><a href="/account">w15_database</a></li> 
                             <li><a href="#">Investors</a></li>
                         </ul>
                     </li> 
